--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.13.1
-  cloud_firestore: ^5.6.8
-  firebase_storage: ^12.4.6
-  firebase_auth: ^5.5.4
+  # Temporarily removed Firebase dependencies
+  # firebase_core: ^3.13.1
+  # cloud_firestore: ^5.6.8
+  # firebase_storage: ^12.4.6
+  # firebase_auth: ^5.5.4
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
@@ -34,10 +35,3 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: fonts/Roboto-Regular.ttf
-        - asset: fonts/Roboto-Bold.ttf
-          weight: 700
